overlap fixed

--- a/src/components/app-product-item/app-product-item.st.css
+++ b/src/components/app-product-item/app-product-item.st.css
@@ -8,7 +8,7 @@
 }
 
 .productImage {
-    width: 100%;
+    width: 80%;
     margin-bottom: 20px;
     transition: all 0.1s;
     font-size: 20px;
